updating email address

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ owner:
   name: Mike Trienis
   avatar: bio-photo-mike.png
   bio: "All about data product and services that scale; from design to implementation"
-  email: mike.trienis@orcsol.com
+  email: mike.trienis@quickinsights.io
   twitter: trienism
   google:
     analytics: UA-65302768-1
